# railsite

./: .gitignore  Cargo.toml  build.rs  railsite.prod.toml
i18n/: enums.yaml  terms.yaml
js/inc/: home.js  page.js
src/: app.rs  config.rs  errors.rs  htmlfn.rs  http.rs  i18n.rs  lang.rs  lib.rs  main.rs  map.rs  server.rs  site.rs  state.rs  statics.rs
src/catalogue/: document.rs  mod.rs  organization.rs  point.rs  source.rs
src/documentation/: data.rs  load.rs  mod.rs
src/html/: cmark.rs  common.rs  components.rs  core.rs  errors.rs  index.rs  line.rs  map.rs  mod.rs  nav.rs  organization.rs  point.rs  skeleton.rs  source.rs  structure.rs  target.rs
src/html/i18n/: common.rs  components.rs  errors.rs  footer.rs  index.rs  line.rs  local.rs  macros.rs  mod.rs  nav.rs  org.rs  point.rs  source.rs  structure.rs  utils.rs
src/htmlfn/: core.rs  html.rs  macros.rs  mod.rs
src/i18n/: mod.rs  term.rs
src/old_html/: core.rs  country.rs  doc.rs  document.rs  errors.rs  index.rs  line.rs  line_event.rs  mod.rs  nav.rs
src/page/: entity.rs  error.rs  frame.rs  home.rs  line.rs  mod.rs  point.rs  source.rs  structure.rs
src/page/aux/: countries.rs  mod.rs  search.rs
src/page/entity/: components.rs  mod.rs  overview.rs
src/panel/: entity.rs  header.rs  mod.rs  point.rs  source.rs  structure.rs
src/route/: assets.rs  aux.rs  document.rs  entity.rs  line.rs  mod.rs  point.rs  region.rs  source.rs  structure.rs
src/site/: api.rs  country.rs  docs.rs  document.rs  errors.rs  home.rs  index.rs  line.rs  map.rs  mod.rs  organization.rs  point.rs  site.rs  source.rs  statics.rs  structure.rs
src/tools/: mod.rs  paginator.rs
src/views/: core.rs  documents.rs  errors.rs  index.rs  mod.rs
static/: style.css  style.css.map  style.scss
static/js/: home.js  map.js  skeleton.js
style/: _mixins.scss  _variables.scss  old._variables.scss  style.scss
style/components/: _details.scss  _generic.scss  _inline.scss  _line.scss  _point.scss
style/parts/: _frame-core.scss  _frame-footer.scss  _frame-header.scss  _home.scss
test-data/facts/: line.yaml  org.yaml  src.yaml
(+25 files in other folders)
