[package]
name = "railsite"
version = "0.1.0"
edition = "2018"
authors = ["Martin Hoffmann <hn@nvnc.de>"]

[dependencies]
clap = "2.33"
headers = "0.3"
horrorshow = "0.8.3"
hyper = "0.13"
ignore = "0.4"
json = "0.12.4"
mime = "0.2"
pulldown-cmark = "0.8.0"
radix_trie = "0.2"
raildata = { git = "https://github.com/railwayhistory/raildata.git" }
railmap = { git = "https://github.com/railwayhistory/railmap.git" }
serde = { version = "1.0", features = ["derive"] }
sled = "0.34.6"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5.6"
unicode-normalization = "0.1.13"
url = "1.2"

[[bin]]
name = "railsite"
doc = false
