[package]
name = "railsite"
version = "0.1.0"
edition = "2021"
authors = ["Martin Hoffmann <hn@nvnc.de>"]

[dependencies]
clap = "2.33"
grass = { version = "0.13", features = [ "macro" ] }
headers = "0.3"
htmlfn = { path = "../htmlfn", features = [ "hyper" ] }
httools = { path = "../httools", features = [ "json"] } # { git = "https://github.com/nlnetlabs/httools", features = [ "json"] }
raildata = { path = "../raildata" } #{ git = "https://github.com/railwayhistory/raildata.git" }
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1", features = ["full"] }
toml = "0.7"

