[package]
name = "railsite"
version = "0.1.0"
edition = "2021"
authors = ["Martin Hoffmann <hn@nvnc.de>"]

[dependencies]
clap = "4.5.47"
grass = { version = "0.13", features = [ "macro" ] }
headers = "0.3"
htmlfn = { git = "https://github.com/partim/htmlfn.git", features = [ "hyper" ] }
#htmlfn = { path = "../../htmlfn/main", features = [ "hyper" ] }
httools = { git = "https://github.com/nlnetlabs/httools", features = [ "json"] }
raildata = { git = "https://github.com/railwayhistory/raildata.git" }
#raildata = { path = "../../raildata/main" }
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1", features = ["full"] }
toml = "0.7"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.27"

